Backend/openshift/monitoring/prometheus/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prometheus
  namespace: ask-app
  labels:
    app: prometheus
spec:
  to:
    kind: Service
    name: prometheus
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
